# credibility

./: .gitignore  README.md  index.html  next.config.mjs  package-lock.json  package.json  pyproject.toml  result.html
api/: app.py  metrics.py  routes.py
frontend_draft/: style.css
src/app/: layout.js  page.js
src/app/components/: Hero.js  Loading.js  Modal.js  Navbar.js  Results.js
